--- a/Banking Webpage/index.html
+++ b/Banking Webpage/index.html
@@ -10,25 +10,27 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap"
       rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    /> -->
+    />
     <title>Banker</title>
   </head>
   <body>
     <!-- Nav bar : ICON LOGO               Features Operations Testimonial OPEN ACCOUNT -->
     <nav class="navigbar">
       <div class="left">
-        <a href="">😇</a>
+        <a href=""
+          ><img src="img/icon.png" alt="Logo" class="footer__logo dark"
+        /></a>
         <a class="active-n" href="">BANKIST</a>
       </div>
       <div class="right">
-        <a href="#s--1">Features</a>
-        <a href="#s--2">Operations</a>
-        <a href="#s--3">Testimonials</a>
+        <a href="#s--1" class="nav__to">Features</a>
+        <a href="#s--2" class="nav__to">Operations</a>
+        <a href="#s--3" class="nav__to">Testimonials</a>
         <a href="" id="open-account">Open account</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
@@ -77,7 +79,11 @@
 
       <div class="complex-card">
         <div class="card-img"><img src="./img/digital.jpg" alt="" /></div>
-        <div class="card-icon">ICON</div>
+        <div class="card-icon">
+          <svg>
+            <use xlink:href="img/icons.svg#icon-monitor"></use>
+          </svg>
+        </div>
         <div class="card-subheader"><h5>100% digital bank</h5></div>
         <div class="card-text">
           <p>
@@ -89,7 +95,11 @@
       </div>
 
       <div class="complex-card rev">
-        <div class="card-icon">ICON</div>
+        <div class="card-icon">
+          <svg>
+            <use xlink:href="img/icons.svg#icon-trending-up"></use>
+          </svg>
+        </div>
         <div class="card-subheader"><h5>Watch your money grow</h5></div>
         <div class="card-text">
           <p>
@@ -103,7 +113,11 @@
 
       <div class="complex-card">
         <div class="card-img"><img src="./img/card.jpg" alt="" /></div>
-        <div class="card-item">ICON</div>
+        <div class="card-item">
+          <svg>
+            <use xlink:href="img/icons.svg#icon-credit-card"></use>
+          </svg>
+        </div>
         <div class="card-subheader"><h5>Free debit card included</h5></div>
         <div class="card-text">
           <p>
@@ -233,7 +247,7 @@ Carousel with Opunions: h5/h6 - p - photo | name - wheer from-->
         </div>
 
         <div class="reviews-content r--3">
-          <h5>The last step to becoming a complete minimalist</h5>
+          <h5>Finally free from old-school banks</h5>
           <p>
             Debitis, nihil sit minus suscipit magni aperiam vel tenetur incidunt
             commodi architecto numquam omnis nulla autem, necessitatibus
@@ -277,7 +291,9 @@ Carousel with Opunions: h5/h6 - p - photo | name - wheer from-->
           <a href="">Contact us</a>
         </div>
 
-        <div class="logo">😇</div>
+        <div class="logo">
+          <img src="img/icon.png" alt="Logo" class="footer__logo" />
+        </div>
 
         <div>
           <footer>
