add link to the second project

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <a href="./Banking Webpage/index.html">Banking website</a>
+    <a href="./Mapty/">Map with workouts</a>
   </body>
 </html>
