add custom alert messages, delete and deleteALl functionality

--- a/Mapty/index.html
+++ b/Mapty/index.html
@@ -18,6 +18,12 @@
       crossorigin=""
     ></script>
 
+    <!-- beautiful alerts library -->
+    <script
+      defer
+      src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"
+    ></script>
+
     <script defer src="./index.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Workouts on Map</title>
@@ -84,12 +90,16 @@
 
           <div class="workouts__displayed">
             <!-- <div class="workout workout__registered hidden" data-id="">
-            <div class="activity__description--header"></div>
-            <div class="activity__description--data">
+            <div class="activity activity__description--header"></div>
+            <div class="activity activity__description--data">
               <div class="activity__type"></div>
               <div class="duration"></div>
               <div class="distance"></div>
               <div class="third"></div>
+            </div>
+            <div class="activity actions--on__workout">
+              <button class="on__workout">Edit</button>
+              <button class="on__workout">Delete</button>
             </div>
           </div> -->
           </div>
