added personal site to the webprojects repo

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
     <div class="projects">
       <h1>WebDev Projects List</h1>
       <div>
+        <a href="./AboutMe/index.html">Personal Website</a>
+      </div>
+
+      <div>
         <a href="./Banking Webpage/index.html">Banking website</a>
       </div>
 
