update how projects are displayed

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -378,7 +378,7 @@
             <div class="container-fluid py-5">
               <h1 class="display-5 fw-bold">Project #2</h1>
               <p class="col-md-8 fs-5">
-                E-commerce website | In progress
+                E-commerce website |</br> In progress
               </p>
               <!-- <button class="btn btn-primary btn-lg" type="button">
                 Example button
@@ -391,7 +391,8 @@
             <div class="container-fluid py-5">
               <h1 class="display-5 fw-bold">Project #3</h1>
               <p class="col-md-8 fs-5">
-                Med app for scanning medical documents and performing comprehensive calculations on the numeric data | In progress
+                Med app for scanning medical documents and performing comprehensive calculations on the numeric data |
+                </br> In progress
               </p>
               <!-- <button class="btn btn-primary btn-lg" type="button">
                 Example button
