--- a/Mapty/index.html
+++ b/Mapty/index.html
@@ -31,6 +31,7 @@
       rel="stylesheet"
     />
 
+    <script defer src="../secret.js"></script>
     <script defer src="./index.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Workouts on Map</title>
