new project added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
       <div>
         <a href="./Mapty/">Map with workouts</a>
       </div>
+
+      <div>
+        <a href="./Forkify/index.html">Map with workouts</a>
+      </div>
     </div>
   </body>
 </html>
