new project more descriptive name

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <div>
-        <a href="./Forkify/index.html">Map with workouts</a>
+        <a href="./Forkify/index.html">Search for recipes</a>
       </div>
     </div>
   </body>
