--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
       <div>
         <a href="./Forkify/index.html">Search for recipes</a>
       </div>
+
+      <div>
+        <a href="">To-Do App</a>
+      </div>
     </div>
   </body>
 </html>
