another app mentioned

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
       <div>
         <a href="">To-Do App</a>
       </div>
+
+      <div>
+        <a href="">UV-Index App</a>
+      </div>
     </div>
   </body>
 </html>
