--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -102,12 +102,7 @@
           A 28-year-old software developer who studied and worked in the
           field of medicine for about 10 years before making a major career change. Today I have an experience of about a year working as a Junior Software Developer. </br>
           I am eager to apply my experience, learn new things and work on challenging problems to create high-quality software solutions that would make people's life better.
-         <br>
-          I am passionate about technology, research, medicine and everything in between. <br> 
-          
-          I am alo keen on dancing Hip-Hop and Dancehall,
-          reading fiction and making long walks. <br>
-    
+          I am passionate about technology, research, medicine and everything in between. <br>    
         </p>
       </div>
     </div>
@@ -177,12 +172,15 @@
               Kyndryl Israel | December 2022 - Now
             </h6>
             <ul class="container-sm mt-1 mb-5 mx-3">
-              <li>Work on an internal RESTful API project in Django in the field of self-service applications that automates management and orchestration of external IT resources (and developed 3 new user-facing features).</li>
-              <li>Test software for bugs and operating speed, which in the best case lead to the efficiency improvement of over 25%.</li>
+              <li>Worked on an internal RESTful API project (a self-service application that automates management and orchestration of external IT resources, primarily storages). Worked primarily on the backend part (Python, Django), having successfully developed 3 new user-facing features.</li>
               <li>
-                Work on another internal self-service project to improve the IT management and orchestration of Cloud environment and virtual appliances (VMware).
+                Worked on another internal self-service application that improves the management and orchestration of Cloud environment and virtual appliances (VMware). 
               </li>
-              <li>Introduced 2 new features into the GUI of the internal self-service applications (JS-React).</li>
+              <li>Work on a blockchain project (using blockchain for secure authorization and authentication), which includes work with Flask for the backend, React.js for the frontend (Web app part) and Xcode, Android Studio (Mobile app part). 
+                Added some new user-facing features in the web app, added a feature in the mobile app.
+              </li>
+              <li>Test software for bugs and operating speed, which in the best case lead to the efficiency improvement of over 25%.</li>
+              <li>Experience with Docker</li>
             </ul>
           </div>
 
@@ -378,11 +376,8 @@
             <div class="container-fluid py-5">
               <h1 class="display-5 fw-bold">Project #2</h1>
               <p class="col-md-8 fs-5">
-                E-commerce website |</br> In progress
+                Node.js projects with and without database, e.g. To-Do app |</br> <a href="https://github.com/VikiMaiselman/WebApps">To the github repo</a>
               </p>
-              <!-- <button class="btn btn-primary btn-lg" type="button">
-                Example button
-              </button> -->
             </div>
           </div>
         </div>
@@ -394,9 +389,6 @@
                 Med app for scanning medical documents and performing comprehensive calculations on the numeric data |
                 </br> In progress
               </p>
-              <!-- <button class="btn btn-primary btn-lg" type="button">
-                Example button
-              </button> -->
             </div>
           </div>
         </div>
