index.html update

--- a/index.html
+++ b/index.html
@@ -102,11 +102,15 @@
       </div>
 
       <div>
-        <a href="">To-Do App</a>
+        <a href="">To-Do App (the link is unactive, the website will be deployed soon)</a>
       </div>
 
       <div>
-        <a href="">UV-Index App</a>
+        <a href="">UV-Index App (the link is unactive, the website will be deployed soon)</a>
+      </div>
+
+      <div>
+        <a href="">Collect Coins (the link is unactive, the website will be deployed soon)</a>
       </div>
     </div>
   </body>
