updated info about myself

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -377,6 +377,7 @@
               <h1 class="display-5 fw-bold">Project #2</h1>
               <p class="col-md-8 fs-5">
                 Node.js projects with and without database, e.g. To-Do app |</br> <a href="https://github.com/VikiMaiselman/WebApps">To the github repo</a>
+              </br> <a href="https://vikimaiselman.github.io/WebApps/">To the examples of static websites</a>
               </p>
             </div>
           </div>
