index.html looks prettier

--- a/index.html
+++ b/index.html
@@ -102,15 +102,18 @@
       </div>
 
       <div>
-        <a href="">To-Do App (the link is unactive, the website will be deployed soon)</a>
+        <a href="">To-Do App</a>
+        <p>(the link is unactive, the website will be deployed soon)</p>
       </div>
 
       <div>
-        <a href="">UV-Index App (the link is unactive, the website will be deployed soon)</a>
+        <a href="">UV-Index App</a>
+        <p>(the link is unactive, the website will be deployed soon)</p>
       </div>
 
       <div>
-        <a href="">Collect Coins (the link is unactive, the website will be deployed soon)</a>
+        <a href="">Collect Coins</a>
+        <p>(the link is unactive, the website will be deployed soon)</p>
       </div>
     </div>
   </body>
