--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -367,7 +367,7 @@
  
 
     <!-- A contact me section-->
-    <div class="container-fluid px-0 py-5 my-4 bg-body-tertiary rounded-3" id="contacts">
+    <div class="contact container-fluid px-0 py-5 my-4 bg-body-tertiary rounded-3" id="contacts">
         <div class="container-fluid py-5 my-4 mx-5 px-0 bg-body-tertiary rounded-3" style="border: 2px solid #e8ccc2;">
             <div class="container-sm pb-1 pt-2 mt-3 mx-5 px-3 resume-subcluster" id="contact-me">
                 <h6>Contact Me</h6>
