--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -100,7 +100,7 @@
       <div class="container-lg about-text px-0">
         <p>
           I am a 28-year-old software developer with 1+ year of experience working in an international IT company (I started working shortly after finishing the Infinity Labs R&D professional bootcamp in Software Engineering). </br>
-          A have an MD and a medical liscense and worked for about 2 years in the field of Internal Medicine before making a major career change.  </br></br>
+          I am a MD and have a medical liscense and worked for about 2 years in the field of Internal Medicine before making a major career change.  </br></br>
           I am keen on learning new things and passionate about challenging problems that make me (and people I work with) grow as a professional. 
           I am eager to apply my experience and start working on more challenging problems to create high-quality software solutions that could hopefully make people's lives better.</br></br>
           I am a new immigrant (that's how I had a chance to do so many things before becoming a software engineer :) </br> I am 100% passionate about technology, research, medicine and everything in between. <br>    
@@ -179,7 +179,7 @@
                   <li>React Native and open-source code of Aries Mobile Wallet (Mobile app development part)</li>
                   <li>Xcode | Android Studio (Mobile app installation & configuration part)</li>
                 </ul> 
-                So far, I have added 6 new user-facing features to the web app (4 in the frontend and 2 in the backend), made a 2.0 version of the web app, and added a feature of receiving and dealing with a specilal type of Out-of-Bond messages in the mobile app.
+                So far, I have added 6 new user-facing features to the web app (4 in the frontend and 2 in the backend), made a 2.0 version of the web app, and added a feature of receiving and dealing with a special type of Out-of-Bond messages in the mobile app.
               </li>
               <li>Worked on an internal RESTful API project (a self-service application that automates management and orchestration of external IT resources, primarily storages). Worked primarily on the backend part (Python, Django), having successfully developed 3 new user-facing features.</li>
               <li>
