change old about me

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -99,11 +99,11 @@
 
       <div class="container-lg about-text px-0">
         <p>
-          I am a 28-year-old software developer with 1+ year of experience working in an international IT company (I started working shortly after finishing the Infinity Labs R&D professional bootcamp in Software Engineering). </br>
-          I am a MD and have a medical liscense and worked for about 2 years in the field of Internal Medicine before making a major career change.  </br></br>
-          I am keen on learning new things and passionate about challenging problems that make me (and people I work with) grow as a professional. 
-          I am eager to apply my experience and start working on more challenging problems to create high-quality software solutions that could hopefully make people's lives better.</br></br>
-          I am a new immigrant (that's how I had a chance to do so many things before becoming a software engineer :) </br> I am 100% passionate about technology, research, medicine and everything in between. <br>    
+          I am a software developer with 1+ year of experience working in an international High-tech company. </br>
+          I am also a real doctor (with a real medical liscense) and worked for about 2 years in the field of Internal Medicine before making a major career change.  </br>
+          I am keen on learning new things and passionate about solving challenging problems. I think it makes me grow as a professional and feeds my curiosity. 
+          I am eager to find the solutions to serious problems and hopefully make people's lives better.</br>
+          I am 100% passionate about computers, technology, research, bio, medicine and everything in between. <br>    
         </p>
       </div>
     </div>
