update about me reference

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="projects">
       <h1>WebDev Projects List</h1>
       <div>
-        <a href="./AboutMe/index.html">Personal Website</a>
+        <a href="./Personal-Website/index.html">Personal Website</a>
       </div>
 
       <div>
