add one reference

--- a/Personal-Website/index.html
+++ b/Personal-Website/index.html
@@ -37,7 +37,7 @@
         ><i class="fa-solid fa-list-check" style="color: #ffffff"></i
         >&nbsp;<span class="cursive-text">My </span> Skills</a
       >
-      <a class="reference"
+      <a href="#contact-me" class="reference"
         ><i class="fa-regular fa-address-card" style="color: #ffffff"></i
         >&nbsp;Contact <span class="cursive-text">Me</span>
       </a>
@@ -351,7 +351,7 @@
           </div>
       </section>
 
-      <footer class="contents">
+      <footer class="contents" id="contact-me">
         <div class="card">
             <div>
               <i class="fa-solid fa-stethoscope fa-2xl" style="color: #000000"></i>
