navbar links fading when not active

--- a/Personal-Website/index.html
+++ b/Personal-Website/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <h2>
+      <h2 class="navbar-home">
         <i class="fa-solid fa-address-card" style="color: #ffffff"></i
         >&nbsp;&nbsp;<span class="cursive-text">I am </span>Victoria
       </h2>
