--- a/Personal-Website/index.html
+++ b/Personal-Website/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/small-screens.css" />
     <script src="./js/index.js" defer></script>
     <title>Document</title>
   </head>
@@ -42,18 +43,27 @@
         ><i class="fa-regular fa-address-card" style="color: #ffffff"></i
         >&nbsp;Contact <span class="cursive-text">Me</span>
       </a>
+      <a href="" class="navbar-bars-icon">
+        <i class="fa fa-bars"></i>
+      </a>
+      <a href="" class="navbar-close-icon">
+        <i class="fa fa-close"></i>
+      </a>
     </nav>
 
     <div class="header">
       <h1 class="header-h1">Victoria Maiselman</h1>
-      <h3 class="header-h3">
-        ➛ a journey from a <span id="doctor">Medical Doctor</span> to a
-        <span id="coder">&nbsp;Software Engineer&nbsp;</span> (1.5+ years)
-      </h3>
-      <p>
-        ➛ 100% passionate about computers, technology, research, biotech,
-        medicine and everything in between
-      </p>
+      <div>
+        <h3 class="header-h3">
+            ➛ a journey from a <span id="doctor">Medical Doctor</span> to a
+            <span id="coder">&nbsp;Software Engineer&nbsp;</span> (1.5+ years)
+        </h3>
+            
+        <p>
+            ➛ 100% passionate about computers, technology, research, biotech,
+            medicine and everything in between
+        </p>
+    </div>
     </div>
 
     <section class="contents">
@@ -264,7 +274,7 @@
           <li><a target="_blank" href="./assets/documents/Complete JS course.pdf"><i>JS Advanced</i></a></li>
         </ul>
   
-        <h2 class="no-margin upper-margin subtitle">First State Moscow Medical University (Sechenov University), Russia</h2>
+        <h2 class="no-margin upper-margin section-subtitle">First State Moscow Medical University (Sechenov University), Russia</h2>
         <h4 class="subtitle-2 header-h3">September 2012 - August 2018</h4>
         <h5 class="no-margin">Description:</h5>
         <ul class="no-margin bottom-margin">
@@ -390,19 +400,19 @@
                 <div>
                     <i class="fa-solid fa-stethoscope fa-2xl"></i>
                 </div>
-                <a href="https://www.linkedin.com/in/victoria-maiselman/"><h3>LinkedIn</h3></a>
+                <a href="https://www.linkedin.com/in/victoria-maiselman/" class="contact-link"><h3>LinkedIn</h3></a>
             </div>
             <div class="card">
                 <div>
                 <i class="fa-solid fa-stethoscope fa-2xl"></i>
                 </div>
-                <a href="mailto:maiselmanwikki@gmail.com"><h3>Email</h3></a>
+                <a href="mailto:maiselmanwikki@gmail.com" class="contact-link"><h3>Email</h3></a>
             </div>
             <div class="card">
                 <div>
                 <i class="fa-solid fa-stethoscope fa-2xl"></i>
                 </div>
-                <a href=" https://github.com/VikiMaiselman/"><h3>Github</h3></a>
+                <a href=" https://github.com/VikiMaiselman/" class="contact-link"><h3>Github</h3></a>
             </div>
         </div>
     </footer>
