add footer and copyright section

--- a/Personal-Website/index.html
+++ b/Personal-Website/index.html
@@ -24,6 +24,13 @@
         <i class="fa-solid fa-address-card" style="color: #ffffff"></i
         >&nbsp;&nbsp;<span class="cursive-text">I am </span>Victoria
       </h2>
+      <a href="#start" class="reference"
+        ><i class="fa fa-home" style="color: #ffffff"></i>&nbsp;<span
+          class="cursive-text"
+          >
+        </span>
+        Home</a
+      >
       <a href="#experience" class="reference"
         ><i class="fa fa-laptop" style="color: #ffffff"></i>&nbsp;<span
           class="cursive-text"
@@ -51,7 +58,7 @@
       </a>
     </nav>
 
-    <div class="header">
+    <div class="header" id="start">
       <h1 class="header-h1">Victoria Maiselman</h1>
       <div>
         <h3 class="header-h3">
@@ -394,29 +401,30 @@
             <h1 class="header-h1 contact-header">Contact Me</h1>
             <h2 class="contact-header">Victoria Maiselman</h2>
         </div>
-        <!-- <h4 class="header-h1 contact-header">Victoria Maiselman</h4> -->
         <div class="social-links">
             <div class="card">
                 <div>
-                    <i class="fa-solid fa-stethoscope fa-2xl"></i>
+                    <i class="fa-brands fa-linkedin fa-2xl"></i>
                 </div>
-                <a href="https://www.linkedin.com/in/victoria-maiselman/" class="contact-link"><h3>LinkedIn</h3></a>
+                <a target="_blank" href="https://www.linkedin.com/in/victoria-maiselman/" class="contact-link"><h3>LinkedIn</h3></a>
             </div>
             <div class="card">
                 <div>
-                <i class="fa-solid fa-stethoscope fa-2xl"></i>
+                <i class="fa-regular fa-envelope fa-2xl"></i>
                 </div>
-                <a href="mailto:maiselmanwikki@gmail.com" class="contact-link"><h3>Email</h3></a>
+                <a target="_blank" href="mailto:maiselmanwikki@gmail.com" class="contact-link"><h3>Email</h3></a>
             </div>
             <div class="card">
                 <div>
-                <i class="fa-solid fa-stethoscope fa-2xl"></i>
+                <i class="fa-brands fa-github fa-2xl"></i>
                 </div>
-                <a href=" https://github.com/VikiMaiselman/" class="contact-link"><h3>Github</h3></a>
+                <a target="_blank" href=" https://github.com/VikiMaiselman/" class="contact-link"><h3>Github</h3></a>
             </div>
         </div>
     </footer>
 
-    <div style="height: 0.75vh;"></div>
+    <div class="copyright">
+        <p class="copyright-text">@ Copyright Pictures: Unsplash | Pexels</p>
+    </div>
   </body>
 </html>
