add new project

--- a/Personal-Website/index.html
+++ b/Personal-Website/index.html
@@ -176,8 +176,13 @@
           <b>MERN Stack</b> Projects:
           <ul>
             <li>
-              <a target="_blank" href="https://github.com/VikiMaiselman/KeeperApp"
-                ><i>Keeper App (inspired by Google Keeper)</i></a
+              <a target="_blank" href="https://github.com/VikiMaiselman/Blog-MERN"
+                ><i>Blog Project</i></a
+              >
+            </li>
+            <li>
+              <a target="_blank" href=" https://github.com/VikiMaiselman/FinanceTrackerWebApp"
+                ><i>Fiancial Tracker</i></a
               >
             </li>
             <li>
@@ -186,8 +191,8 @@
               >
             </li>
             <li>
-              <a target="_blank" href=" https://github.com/VikiMaiselman/FinanceTrackerWebApp"
-                ><i>Fiancial Tracker</i></a
+              <a target="_blank" href="https://github.com/VikiMaiselman/KeeperApp"
+                ><i>Keeper App (inspired by Google Keeper)</i></a
               >
             </li>
           </ul>
