update info about myself

--- a/Personal-Website/index.html
+++ b/Personal-Website/index.html
@@ -63,7 +63,7 @@
                 <div>
                 <h3 class="header-h3">
                     ➛ a journey from a <span id="doctor">Medical Doctor</span> to a
-                    <span id="coder">&nbsp;Software Engineer&nbsp;</span> (experience 1.5+ years)
+                    <span id="coder">&nbsp;Software Engineer&nbsp;</span> (experience ±2 years)
                 </h3>
                 
                 <p>
@@ -92,7 +92,7 @@
         </div>
         <h3>Software Engineer (Present)</h3>
         <p>
-          1.5+ years of experience as a Full Stack Developer in Python and
+          ±2 years of experience as a Full Stack Developer in Python and
           JavaScript.
         </p>
         <p class="subtext">Java and C were my friends when I learned.</p>
@@ -111,17 +111,15 @@
 
     <section class="content" id="experience">
       <h1 class="header-h1 section-title">Experience</h1>
-      <h2 class="no-margin section-subtitle">Software Engineer | Kyndryl Israel</h2>
-      <h4 class="subtitle-2 header-h3">December 2022 - Now</h4>
+      <h2 class="no-margin section-subtitle">Full-Stack Software Engineer | Sentrycs Integrated Counter-Drone Solutions</h2>
+      <h4 class="subtitle-2 header-h3">May 2024 - Now</h4>
 
       <h5 class="no-margin">Stack:</h5>
       <ul class="no-margin">
-        <li><b>Python</b> | Django | Flask</li>
-        <li><b>JavaScript</b> | Node.js | React.js</li> </br>
-        <li><b>Web applications</b> | REST API</li>
-        <li>
-            <b> Blockchain</b> | W3 | Aries Mobile Wallet | React Native | iOS development
-        </li></br>
+        <li><b>Python</b> | Tornado | Flask</li>
+        <li><b>JavaScript</b> | React.js</li> 
+        <li><b>OpenLayer Maps</b> </li> </b>
+        <li><b>Web applications</b> | REST API | Websockets | Microservices Architecture</li>
         <li>CI/CD (Jenkins) | Docker | Kuberentes</li>
         <li>GitHub</li>
         <li>Agile/Scrum</li>
@@ -130,13 +128,42 @@
       <h5 class="no-bottom-margin">Achievements:</h5>
       <ul class="description no-margin">
         <li>
+          <b> Map-based Web application</b> (React.js + Tornado) - forms the core of the anti-drone solution.
+          <ul class="bottom-margin">
+            <li>Work closely with cross-functional teams, including researchers, hardware engineers, and security experts.
+</li>
+            <li>Developed 3 <span class="feature-description">core user-facing features</span> that contribute to <span class="feature-description">airspace safety and security</span> as well as user experience:</li>
+              <ul>
+                <li>Enabled the application to process and store data .kml files, allowing users to import and analyze geospatial data <br> related to drone activity.</li>
+                <li>Created a robust module for user management and secure authentication, integrating it seamlessly into both the backend and frontend. <br> This module includes role-based access control (RBAC).</li>
+                <li>Developed 2 microservices in order to implement SMS/MMS and email notifications for customers, <br>ensuring timely communication during critical airspace events.</li>
+              </ul>
+          </ul>
+        </li>
+      </ul>
+
+      <h2 class="no-margin upper-margin section-subtitle">Software Engineer | Kyndryl Israel</h2>
+      <h4 class="subtitle-2 header-h3">December 2022 - Now</h4>
+
+      <h5 class="no-margin">Stack:</h5>
+      <ul class="no-margin">
+        <li><b>Python</b> | Django | Flask</li>
+        <li><b>JavaScript</b> | Node.js | React.js</li>
+        <li><b>Web applications</b> | REST API</li>
+        <li>
+            <b> Blockchain</b> | W3 | Aries Mobile Wallet | React Native | iOS development
+        </li>
+      </ul>
+
+      <h5 class="no-bottom-margin">Achievements:</h5>
+      <ul class="description no-margin">
+        <li>
           <b>Web application</b> for a blockchain project (secure authorization &
           authentication).
           <ul class="bottom-margin">
-            <li>Added > 6 <span class="feature-description">new user-facing features</span> to the web app</li>
-            <li>Released a <span class="feature-description">2.0 version</span> of the web app</li>
+            <li>Developed from scratch a Flask + Node.js services (backend) and React.js (frontend) for the <span class="feature-description">web app</span> that allows communication with the <span class="feature-description">Aries Blockchain</span> system</li>
             <li>
-              Added a <span class="feature-description">new</span> user-facing <span class="feature-description">feature to the Mobile Wallet</span> app (dealing with
+              Added a <span class="feature-description">new</span> user-facing <span class="feature-description">feature to the open-source Mobile Wallet</span> app (dealing with
               a special type of Out-of-Bond messages)
             </li>
             <li>Worked with React Native and Swift for the Mobile Wallet app</li>
@@ -149,11 +176,10 @@
             <b>Django-based RESTful API</b> application (self-service) for automation and
           orchestration of external IT resources, primarily storages.
           <ul class="bottom-margin">
-            <li>Successfully developed <span class="feature-description">at least 3 new user-facing features</span></li>
+            <li>Successfully developed <span class="feature-description">3 new user-facing features</span></li>
             <li>Searched for bugs and eradicated in the whole codebase</li>
             <li>
-              Tested for bugs and operating speed, which in the best case lead
-              to the <span class="feature-description">efficiency improvement of over 25%</span>
+              Conducted software testing for bugs and operating speed to enhance efficiency <span class="feature-description"> (25% improvement)</span>
             </li>
           </ul>
         </li>
